--- a/src/tests/index.html
+++ b/src/tests/index.html
@@ -7,14 +7,16 @@
     <script type="text/javascript" src="../../src/aspectos.js"></script>
     <script type="text/javascript" src="../../lib/jasmine-1.2.rc1/lib/jasmine-core/jasmine.js"></script>
     <script type="text/javascript" src="../../lib/jasmine-1.2.rc1/lib/jasmine-core/jasmine-html.js"></script>
+    <script type="text/javascript" src="../../lib/console-runner.js"></script>
     <script type="text/javascript" src="./aspectos.js"></script>
     <link rel="stylesheet" href="../../lib/jasmine-1.2.rc1/lib/jasmine-core/jasmine.css">
 </head>
 <body>
 
 <script type="text/javascript">
-
+    var console_reporter = new jasmine.ConsoleReporter();
     jasmine.getEnv().addReporter(new jasmine.HtmlReporter());
+    jasmine.getEnv().addReporter(console_reporter);
     jasmine.getEnv().execute();
 </script>
 </body>
