--- a/src/tests/index.html
+++ b/src/tests/index.html
@@ -7,7 +7,7 @@
     <script type="text/javascript" src="../../src/aspectos.js"></script>
     <script type="text/javascript" src="../../lib/jasmine-1.2.rc1/lib/jasmine-core/jasmine.js"></script>
     <script type="text/javascript" src="../../lib/jasmine-1.2.rc1/lib/jasmine-core/jasmine-html.js"></script>
-    <script type="text/javascript" src="../../lib/console-runner.js"></script>
+    <script type="text/javascript" src="../../lib/test-helpers/console-runner.js"></script>
     <script type="text/javascript" src="./aspectos.js"></script>
     <link rel="stylesheet" href="../../lib/jasmine-1.2.rc1/lib/jasmine-core/jasmine.css">
 </head>
