--- a/src/tests/index.html
+++ b/src/tests/index.html
@@ -5,11 +5,11 @@
 
     <script type="text/javascript" src="../../lib/ender.js"></script>
     <script type="text/javascript" src="../../src/aspectos.js"></script>
-    <script type="text/javascript" src="../../lib/jasmine-1.2.rc1/lib/jasmine-core/jasmine.js"></script>
-    <script type="text/javascript" src="../../lib/jasmine-1.2.rc1/lib/jasmine-core/jasmine-html.js"></script>
+    <script type="text/javascript" src="../../lib/jasmine/lib/jasmine-core/jasmine.js"></script>
+    <script type="text/javascript" src="../../lib/jasmine/lib/jasmine-core/jasmine-html.js"></script>
     <script type="text/javascript" src="../../lib/test-helpers/console-runner.js"></script>
     <script type="text/javascript" src="./aspectos.js"></script>
-    <link rel="stylesheet" href="../../lib/jasmine-1.2.rc1/lib/jasmine-core/jasmine.css">
+    <link rel="stylesheet" href="../../lib/jasmine/lib/jasmine-core/jasmine.css">
 </head>
 <body>
 
