--- a/src/tests/index.html
+++ b/src/tests/index.html
@@ -10,14 +10,15 @@
     <script type="text/javascript" src="../../lib/test-helpers/console-runner.js"></script>
     <script type="text/javascript" src="./aspectos.js"></script>
     <link rel="stylesheet" href="../../lib/jasmine/lib/jasmine-core/jasmine.css">
+    <script type="text/javascript">
+        $.domReady(function() {
+            var console_reporter = new jasmine.ConsoleReporter();
+            jasmine.getEnv().addReporter(new jasmine.HtmlReporter());
+            jasmine.getEnv().addReporter(console_reporter);
+            jasmine.getEnv().execute();
+        });
+</script>
 </head>
 <body>
-
-<script type="text/javascript">
-    var console_reporter = new jasmine.ConsoleReporter();
-    jasmine.getEnv().addReporter(new jasmine.HtmlReporter());
-    jasmine.getEnv().addReporter(console_reporter);
-    jasmine.getEnv().execute();
-</script>
 </body>
 </html>
