--- a/src/tests/index.html
+++ b/src/tests/index.html
@@ -2,23 +2,39 @@
 <html>
 <head>
     <title>Aspectos Tests</title>
-
+    <!--Dependency-->
     <script type="text/javascript" src="../../lib/ender.js"></script>
+    <!--Library code-->
     <script type="text/javascript" src="../../src/aspectos.js"></script>
-    <script type="text/javascript" src="../../lib/jasmine/lib/jasmine-core/jasmine.js"></script>
-    <script type="text/javascript" src="../../lib/jasmine/lib/jasmine-core/jasmine-html.js"></script>
-    <script type="text/javascript" src="../../lib/test-helpers/console-runner.js"></script>
+    <!--Tests dependencies-->
+    <script type="text/javascript" src="../../lib/chai/chai.js"></script>
+    <script type="text/javascript" src="../../lib/mocha/mocha.js"></script>
+    <script>
+        var assert = chai.assert,
+            expect = chai.expect,
+            should = chai.should(); // Note that should has to be executed
+
+        mocha.setup('bdd');
+    </script>
+
+    <!--Tests-->
     <script type="text/javascript" src="./aspectos.js"></script>
-    <link rel="stylesheet" href="../../lib/jasmine/lib/jasmine-core/jasmine.css">
+
+    <!-- Testem support -->
     <script type="text/javascript">
-        var console_reporter = new jasmine.ConsoleReporter();
-        $.domReady(function() {
-            jasmine.getEnv().addReporter(new jasmine.HtmlReporter());
-            jasmine.getEnv().addReporter(console_reporter);
-            jasmine.getEnv().execute();
-        });
-</script>
+        if (location.hash.indexOf('#testem') !== -1) {
+            document.write('<script src="/testem.js"></'+'script>');
+        }
+    </script>
+    <script type="text/javascript">
+    if (location.hash.indexOf('#ci') === -1) {
+        document.write('<script type="text/javascript">'+'$.domReady(function() { mocha.run()});</'+'script>');
+    }
+    </script>
+
+    <link rel="stylesheet" href="../../lib/mocha/mocha.css" />
 </head>
 <body>
+<div id="mocha"></div>
 </body>
 </html>
